--- a/provision.yml
+++ b/provision.yml
@@ -120,6 +120,10 @@
     shell: "source /etc/profile.d/apps-bin-path.sh && microk8s.enable storage"
     args:
       executable: /bin/bash
+  - name: Enable helm3
+    shell: "source /etc/profile.d/apps-bin-path.sh && microk8s.enable helm3"
+    args:
+      executable: /bin/bash
   - name: Enable K8s Dashboard
     shell: "source /etc/profile.d/apps-bin-path.sh && /snap/bin/microk8s.enable dashboard"
     when: k8s_dashboard|default(False)|bool == True
@@ -133,3 +137,25 @@
     shell: "chown -f -R vagrant ~/.kube"
     args:
       executable: /bin/bash
+  - name: Add kubectl alias for vagrant user
+    lineinfile:
+      path: /home/vagrant/.bashrc
+      line: "alias kubectl='microk8s kubectl'"
+      owner: vagrant
+      regexp: "^alias kubectl='microk8s kubectl'$"
+      state: present
+      insertafter: EOF
+      create: True
+  - name: Add helm alias for vagrant user
+    lineinfile:
+      path: /home/vagrant/.bashrc
+      line: "alias helm='microk8s helm3'"
+      regexp: "^alias helm='microk8s helm3'$"
+      state: present
+      insertafter: EOF
+      create: True
+  - name: Copying bash aliases
+    copy:
+      src: ./files/.bash_aliases
+      dest: /home/vagrant/.bash_aliases
+      owner: vagrant
